--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="grid-1">
             <div class="title flex-col item-baseline">
                 <img src="image/merry.png" />
-                <div class="countdown">크리스마스까지 <span id="countdown" class="countdown"></span></div>
+                <div class="countdown"><span id="countdown" class="countdown"></span></div>
             </div>
             <div class="flex-row">
                 <audio class="bgm" src="Jingle Bell Rock.mp3" preload="auto" style="display: none"></audio>
